[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
quiet-core.workspace = true
axum = "0.8"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
