[package]
name = "quiet-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utils.workspace = true
kdtree.workspace = true

# For reading the raw map files (High performance)
osmpbf = "0.3"
# For the math/routing logic (Dijkstra/A*)
petgraph = "0.8"
# For calculating physical distances (Haversine formula)
geoutils = "0.5"
rayon = "1.11"
